src/objects/ADvendio__AdServer_ID__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>In the AdSpecs &amp; Rates Manager, Inventory &amp; Rates Manager and Content Wizard, only active marked records will be available.</description>
        <inlineHelpText>In the AdSpecs &amp; Rates Manager, Inventory &amp; Rates Manager and Content Wizard, only active marked records will be available.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdServer_ID__c</fullName>
        <description>Enter the ad server ID.</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter the ad server ID.</inlineHelpText>
        <label>AdServer ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdServer_Login__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Connect this ad server ID to the ad server login on which the ad server ID can be found.</description>
        <inlineHelpText>Connect this ad server ID to the ad server login on which the ad server ID can be found.</inlineHelpText>
        <label>AdServer Login</label>
        <referenceTo>ADvendio__AdServer_Logins__c</referenceTo>
        <relationshipLabel>AdServer IDs</relationshipLabel>
        <relationshipName>DART_IDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__AdServer_Name__c</fullName>
        <description>Enter the name of the ad server, in order to be able to differentiate between the ad server Ids of different ad servers in a list view.</description>
        <inlineHelpText>Enter the name of the ad server, in order to be able to differentiate between the ad server Ids of different ad servers in a list view.</inlineHelpText>
        <label>AdServer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Category__c</fullName>
        <description>Shows which category the AdServer ID belongs to (Inventory, Key Values, Targeting Criteria). This is automatically filled when transferring Ids from the AdServer.</description>
        <inlineHelpText>Shows which category the AdServer ID belongs to (Inventory, Key Values, Targeting Criteria). This is automatically filled when transferring Ids from the AdServer.</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Connection</fullName>
                </value>
                <value>
                    <fullName>Devices</fullName>
                </value>
                <value>
                    <fullName>Geography</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>Key-values</fullName>
                </value>
                <value>
                    <fullName>Mobile application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Format__c</fullName>
        <inlineHelpText>Available formats for this AdServerId. This field is used to filter AdServerIds in the AdSpecs &amp; Rates Manager to get matching AdServerIds to the selected AdType.</inlineHelpText>
        <label>Format</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>468x60</fullName>
                </value>
                <value>
                    <fullName>728x90</fullName>
                </value>
                <value>
                    <fullName>728x300</fullName>
                </value>
                <value>
                    <fullName>180x150</fullName>
                </value>
                <value>
                    <fullName>300x250</fullName>
                </value>
                <value>
                    <fullName>120x600</fullName>
                </value>
                <value>
                    <fullName>160x600</fullName>
                </value>
                <value>
                    <fullName>420x600</fullName>
                </value>
                <value>
                    <fullName>400x400</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__ManualDeactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__Parent_AdServer_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If there is a superior ad server ID, you can enter its ID here.</description>
        <inlineHelpText>If there is a superior ad server ID, you can enter its ID here.</inlineHelpText>
        <label>Parent AdServer ID</label>
        <referenceTo>ADvendio__AdServer_ID__c</referenceTo>
        <relationshipLabel>AdServer IDs</relationshipLabel>
        <relationshipName>AdServer_IDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Medium zur Übertragung von Werbebotschaften</inlineHelpText>
        <label>Site</label>
        <referenceTo>ADvendio__Site__c</referenceTo>
        <relationshipLabel>AdServer IDs</relationshipLabel>
        <relationshipName>AdServer_IDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Type__c</fullName>
        <description>Choose which type of ad server ID is concerned.</description>
        <inlineHelpText>Choose which type of ad server ID is concerned.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Site</fullName>
                </value>
                <value>
                    <fullName>Zone</fullName>
                </value>
                <value>
                    <fullName>Zone Group</fullName>
                </value>
                <value>
                    <fullName>Content Category</fullName>
                </value>
                <value>
                    <fullName>Content Unit</fullName>
                </value>
                <value>
                    <fullName>Content Unit Group</fullName>
                </value>
                <value>
                    <fullName>Page</fullName>
                </value>
                <value>
                    <fullName>Page Group</fullName>
                </value>
                <value>
                    <fullName>Pack</fullName>
                </value>
                <value>
                    <fullName>Format</fullName>
                </value>
                <value>
                    <fullName>Placement</fullName>
                </value>
                <value>
                    <fullName>Ad Unit</fullName>
                </value>
                <value>
                    <fullName>Key</fullName>
                </value>
                <value>
                    <fullName>Value</fullName>
                </value>
                <value>
                    <fullName>Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <description>Enter a UniqueKey (recommended: syntax) for this ad server ID.</description>
        <externalId>true</externalId>
        <inlineHelpText>Enter a UniqueKey (recommended: syntax) for this ad server ID.</inlineHelpText>
        <label>UniqueKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mig_ADvendio_AdServer_ID__c</fullName>
        <formula>TEXT(ADvendio__AdServer_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mig_ADvendio__AdServer_ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P7S1_Format__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Format</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.ADvendio__Type__c</field>
                <operation>equals</operation>
                <value>Ad Unit</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>P7S1_Format__c</referenceTo>
        <relationshipLabel>AdServer IDs</relationshipLabel>
        <relationshipName>AdServer_IDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SomDig_AdServer_ID_Help__c</fullName>
        <description>Kopie des Feldes ADvendio__AdServer_ID__c</description>
        <formula>TEXT (ADvendio__AdServer_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Kopie des Feldes AdServer ID (ohne 1000er-Trennzeichen)</inlineHelpText>
        <label>AdServer ID Help</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_ContentType__c</fullName>
        <label>Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Professional Content</fullName>
                </value>
                <value>
                    <fullName>Erotical Content</fullName>
                </value>
                <value>
                    <fullName>User Generated Content</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_KeineLieferzahlen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wenn diese Checkbox gesetzt ist, werden Lieferdaten für diese Adserver-Id direkt nach deren Anlage gelöscht.</description>
        <inlineHelpText>Wenn diese Checkbox gesetzt ist, werden Lieferdaten für diese Adserver-Id direkt nach deren Anlage gelöscht.</inlineHelpText>
        <label>Keine Lieferzahlen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_MediagattungsSegment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Gruppierung der gelieferten Produkte nach ihrer Art: z.B. InApp/Mobile, InBrowser/Online, Connected TV/HbbTv, NonMedia usw.</description>
        <inlineHelpText>Gruppierung der gelieferten Produkte nach ihrer Art: z.B. InApp/Mobile, InBrowser/Online, Connected TV/HbbTv, NonMedia usw.</inlineHelpText>
        <label>Mediagattungs-Segment</label>
        <referenceTo>SomDig_MediagattungsSegment__c</referenceTo>
        <relationshipLabel>AdServer IDs</relationshipLabel>
        <relationshipName>AdServer_IDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_TargetingProvider__c</fullName>
        <description>Zusammenfassung von Keys zu einer Gruppe, welche über einen technischen Dienstleister/Site/Seitenbetreiber zur Verfügung gestellt werden können. Vereinfacht die Zuordnung von mehreren Keys zu Werbemittel/Produkten.</description>
        <inlineHelpText>Zusammenfassung von Keys zu einer Gruppe, welche über einen technischen Dienstleister/Site/Seitenbetreiber zur Verfügung gestellt werden können. Vereinfacht die Zuordnung von mehreren Keys zu Werbemittel/Produkten.</inlineHelpText>
        <label>Targeting Provider</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ATV_PBT</fullName>
                </value>
                <value>
                    <fullName>Autosites</fullName>
                </value>
                <value>
                    <fullName>Diverse Kriterien</fullName>
                </value>
                <value>
                    <fullName>Gesundheit.de</fullName>
                </value>
                <value>
                    <fullName>nugg.ad</fullName>
                </value>
                <value>
                    <fullName>nugg.ad InApp</fullName>
                </value>
                <value>
                    <fullName>Rotationsausschluss</fullName>
                </value>
                <value>
                    <fullName>SmartGeo</fullName>
                </value>
                <value>
                    <fullName>Vereinssites</fullName>
                </value>
                <value>
                    <fullName>wetter.com</fullName>
                </value>
                <value>
                    <fullName>wetter.com CTV</fullName>
                </value>
                <value>
                    <fullName>ZG S71 Paket</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_TopMediagattungsSegment__c</fullName>
        <description>Da wir in dfp nur max. 4 Stufen der Adunits haben/nutzen reicht in diesem Fall eine Formel welche über diese 4 Stufen die Zuordnung der manuell zugeordneten obersten Ebene an die darunterliegenden Adunits vererbt.</description>
        <formula>IF (ISBLANK(ADvendio__Parent_AdServer_ID__c),
    null,
    IF (ISBLANK(ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__c),
        SomDig_MediagattungsSegment__c,
        IF (ISBLANK(ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__c),
            ADvendio__Parent_AdServer_ID__r.SomDig_MediagattungsSegment__c,
            IF (ISBLANK(ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__c),
                ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__r.SomDig_MediagattungsSegment__c,
                IF (ISBLANK(ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__c),
                    ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__r.SomDig_MediagattungsSegment__c,
                    ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__r.SomDig_MediagattungsSegment__c
                   )
               )
           )
       )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Top Mediagattungs-Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_TopSite__c</fullName>
        <formula>IF (ISBLANK(ADvendio__Parent_AdServer_ID__c),
    null,
    IF (ISBLANK(ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__c),
        ADvendio__Site__c,
        IF (ISBLANK(ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__c),
            ADvendio__Parent_AdServer_ID__r.ADvendio__Site__c,
            IF (ISBLANK(ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__c),
                ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__r.ADvendio__Site__c,
                IF (ISBLANK(ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__c),
                    ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__r.ADvendio__Site__c,
                    ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__r.ADvendio__Parent_AdServer_ID__r.ADvendio__Site__c
                   )
               )
           )
       )
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Top Site</label>
        <type>Text</type>
    </fields>
    <label>AdServer ID</label>
    <listViews>
        <fullName>ADvendio__Ad_Unit</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ADvendio__Type__c</columns>
        <columns>ADvendio__AdServer_Name__c</columns>
        <columns>ADvendio__AdServer_ID__c</columns>
        <columns>ADvendio__AdServer_Login__c</columns>
        <columns>ADvendio__Parent_AdServer_ID__c</columns>
        <columns>ADvendio__UniqueKey__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADvendio__Type__c</field>
            <operation>equals</operation>
            <value>Ad Unit</value>
        </filters>
        <filters>
            <field>ADvendio__AdServer_Login__c</field>
            <operation>equals</operation>
            <value>ASL-011</value>
        </filters>
        <label>Ad Unit</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ADvendio__AdServer_Name__c</columns>
        <columns>ADvendio__Type__c</columns>
        <columns>ADvendio__AdServer_ID__c</columns>
        <columns>ADvendio__AdServer_Login__c</columns>
        <columns>ADvendio__Parent_AdServer_ID__c</columns>
        <columns>ADvendio__Format__c</columns>
        <columns>P7S1_Format__c</columns>
        <columns>P7S1_IdOld__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ADvendio__Content_Unit</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ADvendio__AdServer_Name__c</columns>
        <columns>ADvendio__AdServer_ID__c</columns>
        <columns>ADvendio__AdServer_Login__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADvendio__Type__c</field>
            <operation>equals</operation>
            <value>Content Unit</value>
        </filters>
        <label>Content Unit</label>
    </listViews>
    <listViews>
        <fullName>ADvendio__Content_Unit_Group</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ADvendio__AdServer_Name__c</columns>
        <columns>ADvendio__AdServer_ID__c</columns>
        <columns>ADvendio__AdServer_Login__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADvendio__Type__c</field>
            <operation>equals</operation>
            <value>Content Unit Group</value>
        </filters>
        <label>Content Unit Group</label>
    </listViews>
    <listViews>
        <fullName>ADvendio__Format</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ADvendio__AdServer_Name__c</columns>
        <columns>ADvendio__AdServer_ID__c</columns>
        <columns>ADvendio__AdServer_Login__c</columns>
        <columns>ADvendio__Parent_AdServer_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADvendio__Type__c</field>
            <operation>equals</operation>
            <value>Format</value>
        </filters>
        <label>Format</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ADvendio__Pack</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ADvendio__AdServer_Name__c</columns>
        <columns>ADvendio__AdServer_ID__c</columns>
        <columns>ADvendio__AdServer_Login__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADvendio__Type__c</field>
            <operation>equals</operation>
            <value>Pack</value>
        </filters>
        <label>Pack</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ADvendio__Page</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ADvendio__AdServer_Name__c</columns>
        <columns>ADvendio__AdServer_ID__c</columns>
        <columns>ADvendio__AdServer_Login__c</columns>
        <columns>ADvendio__Parent_AdServer_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADvendio__Type__c</field>
            <operation>equals</operation>
            <value>Page</value>
        </filters>
        <label>Page</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ADvendio__Page_Group</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ADvendio__AdServer_Name__c</columns>
        <columns>ADvendio__AdServer_ID__c</columns>
        <columns>ADvendio__AdServer_Login__c</columns>
        <columns>ADvendio__Parent_AdServer_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADvendio__Type__c</field>
            <operation>equals</operation>
            <value>Page Group</value>
        </filters>
        <label>Page Group</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ADvendio__Placement</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ADvendio__AdServer_Name__c</columns>
        <columns>ADvendio__AdServer_ID__c</columns>
        <columns>ADvendio__AdServer_Login__c</columns>
        <columns>ADvendio__Parent_AdServer_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADvendio__Type__c</field>
            <operation>equals</operation>
            <value>Placement</value>
        </filters>
        <label>Placement</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ADvendio__Site</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ADvendio__AdServer_Name__c</columns>
        <columns>ADvendio__AdServer_ID__c</columns>
        <columns>ADvendio__AdServer_Login__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADvendio__Type__c</field>
            <operation>equals</operation>
            <value>Site</value>
        </filters>
        <filters>
            <field>ADvendio__Type__c</field>
            <operation>equals</operation>
            <value>Website</value>
        </filters>
        <label>Site</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ADvendio__Zone</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ADvendio__AdServer_Name__c</columns>
        <columns>ADvendio__AdServer_ID__c</columns>
        <columns>ADvendio__AdServer_Login__c</columns>
        <columns>ADvendio__Parent_AdServer_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADvendio__Type__c</field>
            <operation>equals</operation>
            <value>Zone</value>
        </filters>
        <label>Zone</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ADvendio__Zone_Group</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>ADvendio__AdServer_Name__c</columns>
        <columns>ADvendio__AdServer_ID__c</columns>
        <columns>ADvendio__AdServer_Login__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADvendio__Type__c</field>
            <operation>equals</operation>
            <value>Zone Group</value>
        </filters>
        <label>Zone Group</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AdUnits_ohne_Mediagattungssegment</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>ADvendio__Parent_AdServer_ID__c</columns>
        <columns>ADvendio__AdServer_ID__c</columns>
        <columns>ADvendio__Site__c</columns>
        <columns>SomDig_MediagattungsSegment__c</columns>
        <columns>ADvendio__Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADvendio__Type__c</field>
            <operation>equals</operation>
            <value>Ad Unit</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ADvendio__AdServer_ID__c.ADvendio__DFP</value>
        </filters>
        <filters>
            <field>SomDig_MediagattungsSegment__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>ADvendio__Parent_AdServer_ID__c</field>
            <operation>equals</operation>
            <value>5731</value>
        </filters>
        <filters>
            <field>ADvendio__Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>AdUnits Level 1 (aktiv) ohne M.Segment</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>AdUnits_ohne_Werbetr_ger</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>ADvendio__Parent_AdServer_ID__c</columns>
        <columns>ADvendio__AdServer_ID__c</columns>
        <columns>ADvendio__Site__c</columns>
        <columns>SomDig_MediagattungsSegment__c</columns>
        <columns>ADvendio__Status__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADvendio__Type__c</field>
            <operation>equals</operation>
            <value>Ad Unit</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ADvendio__AdServer_ID__c.ADvendio__DFP</value>
        </filters>
        <filters>
            <field>ADvendio__Site__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>ADvendio__Parent_AdServer_ID__c</field>
            <operation>equals</operation>
            <value>5731</value>
        </filters>
        <filters>
            <field>ADvendio__Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>AdUnits Level 1 (aktiv) ohne Werbeträger</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>SomDig_Keys</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>ADvendio__Parent_AdServer_ID__c</columns>
        <columns>ADvendio__AdServer_ID__c</columns>
        <columns>ADvendio__Type__c</columns>
        <columns>ADvendio__AdServer_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ADvendio__AdServer_Login__c</field>
            <operation>equals</operation>
            <value>ASL-011</value>
        </filters>
        <filters>
            <field>ADvendio__Type__c</field>
            <operation>equals</operation>
            <value>Key</value>
        </filters>
        <label>Keys dfp</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>AdServer ID Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AdServer IDs</pluralLabel>
    <recordTypes>
        <fullName>ADvendio__ADITION</fullName>
        <active>true</active>
        <description>This record type should be used to store IDs of AdServer ADITION</description>
        <label>ADITION</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__ADTECH</fullName>
        <active>true</active>
        <description>This record type should be used to store IDs of AdServer ADTECH</description>
        <label>ADTECH</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__DART</fullName>
        <active>true</active>
        <description>This record type should be used to store IDs of AdServer DART</description>
        <label>DART</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__DFP</fullName>
        <active>true</active>
        <description>This record type should be used to store IDs of AdServer DFP</description>
        <label>DFP</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__LiveRail</fullName>
        <active>true</active>
        <description>This record type should be used to store IDs of AdServer LiveRail</description>
        <label>LiveRail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__NUGGAD</fullName>
        <active>true</active>
        <description>This record type should be used to store IDs of AdServer NUGGAD</description>
        <label>NUGGAD</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__SMART</fullName>
        <active>true</active>
        <description>This record type should be used to store IDs of AdServer SMART</description>
        <label>SMART</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__TFSM</fullName>
        <active>true</active>
        <description>This record type should be used to store IDs of AdServer 24/7 OAS</description>
        <label>TFSM</label>
    </recordTypes>
    <recordTypes>
        <fullName>ADvendio__YIELDLAB</fullName>
        <active>true</active>
        <description>This record type should be used to store IDs of AdServer YIELDLAB</description>
        <label>YIELDLAB</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SomDig_DisabledFieldsForTypePlacement</fullName>
        <active>true</active>
        <description>Wenn der Type &apos;Placement&apos; ist, dürfen Werbeträger, Mediagattungs-Segment und Content Type nicht gepflegt werden.</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp;
NOT(ADvendio__AdServer_Login__r.ADvendio__Transfer_in_progress__c) &amp;&amp;
ISPICKVAL(ADvendio__Type__c, &apos;Placement&apos;) &amp;&amp;
(
NOT(ISBLANK(ADvendio__Site__c)) ||
NOT(ISBLANK(SomDig_MediagattungsSegment__c)) ||
NOT(ISPICKVAL(SomDig_ContentType__c, &apos;&apos;))
)</errorConditionFormula>
        <errorMessage>Wenn der Type &apos;Placement&apos; ist, dürfen Werbeträger, Mediagattungs-Segment und Content Type nicht gepflegt werden.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SomDig_RequiredFieldsForTypeAdUnit</fullName>
        <active>true</active>
        <description>Wenn der Type &apos;Ad Unit&apos; ist, müssen Werbeträger und Mediagattungs-Segment gepflegt werden.</description>
        <errorConditionFormula>NOT(ISNEW()) &amp;&amp;
NOT(ADvendio__AdServer_Login__r.ADvendio__Transfer_in_progress__c) &amp;&amp;
ISPICKVAL(ADvendio__Type__c, &apos;Ad Unit&apos;) &amp;&amp;
(
ISBLANK(ADvendio__Site__c) ||
ISBLANK(SomDig_MediagattungsSegment__c)
)</errorConditionFormula>
        <errorMessage>Wenn der Type &apos;Ad Unit&apos; ist, müssen Werbeträger und Mediagattungs-Segment gepflegt werden.</errorMessage>
    </validationRules>
</CustomObject>